[package]
name = "yawa"
version = "1.1.0"
edition = "2021"
authors = ["Yogesh Dhamija"]
description = "YAWA: Yet Another Workout App keeps track of your lifts and weights, through a program based on the GZCL method, and relative weights from SymmetricStrength.com."

[profile.release]
lto = true
strip = true

[dependencies]
clap = { version = "*", features = ["derive"] } # Used for the controller, to interpret user-entered commands
anyhow = "*"                                    # Used for propogating errors up throughout the lifting
serde = { version="*", features = ["derive"] }  # Used by the filesystem adapter to persist/summon data
serde_json = "*"                                # Used by the filesystem adapter to persist/summon data
chrono = "*"                                    # Used by the filesystem adapter to log timestamps

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
rand = "*"