[package]
name = "yawa"
version = "1.3.1"
edition = "2021"
authors = ["Yogesh Dhamija"]
description = "YAWA: Yet Another Workout App keeps track of your lifts and weights, through a program based on the GZCL method, and relative weights from SymmetricStrength.com."

[profile.release]
lto = true
strip = true

[dependencies]
clap = { version = "*", features = ["derive"] } # Used for the TUI adapter, to interpret user-entered commands
anyhow = "*"                                    # Used everywhere (including domain) for propogating errors
serde = { version="*", features = ["derive"] }  # Used by the filesystem adapter to persist/summon data
serde_json = "*"                                # Used by the filesystem adapter to persist/summon data
chrono = "*"                                    # Used by the filesystem adapter to log timestamps

[dev-dependencies]
assert_cmd = "*"        # Used by binary tests to run CLI program
predicates = "*"         # Used by binary tests to assert on CLI program's output
rand = "*"          # Used by binary tests to create directories with random names
pretty_assertions = "*"             # Used in tests (including in domain) to make test output prettier for diffs between large objects